--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-nuxt-example",
   "version": "1.0.0",
   "description": "Nuxt.js project",
-  "author": "@heric1812",
+  "author": "Herick Ruiz <heric1812@gmail.com>",
   "private": true,
   "scripts": {
     "dev": "nuxt",
@@ -14,14 +14,14 @@
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
-    "nuxt": "^1.0.0",
-    "push-dir": "^0.4.1"
+    "nuxt": "^1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-plugin-vue": "^4.0.0",
+    "push-dir": "^0.4.1"
   }
 }
