--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
-    "nuxt": "^1.0.0"
+    "nuxt": "^1.0.0",
+    "vuetify": "^1.0.13"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
@@ -25,6 +26,10 @@
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-vue": "^4.0.0",
-    "push-dir": "^0.4.1"
+    "node-sass": "^4.8.3",
+    "push-dir": "^0.4.1",
+    "sass-loader": "^6.0.7",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2"
   }
 }
